Prevent sticky hover on iOS

--- a/src/components/TripOverview.css
+++ b/src/components/TripOverview.css
@@ -5,8 +5,10 @@
   align-items: center;
 }
 
-.trip-overview:hover {
-  background-color: #eee;
+@media (hover: hover) {
+  .trip-overview:hover {
+    background-color: #eee;
+  }
 }
 
 .trip-overview__origin,
